--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 <a href="repository.gujal-2.0.0.zip">repository.gujal-2.0.0.zip</a>
 <br/>
 <a href="plugin.video.live.streamspro-3.0.0~alpha2.zip">plugin.video.live.streamspro-3.0.0~alpha2.zip</a>
+<br/>
+<a href="plugin.video.live.streamspro-3.0.0~alpha3.zip">plugin.video.live.streamspro-3.0.0~alpha3.zip</a>
 </body>
 </html>
