--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <br/>
 <a href="repository.resolveurl-1.0.0.zip">repository.resolveurl-1.0.0.zip</a>
 <br/>
+<a href="plugin.video.kaito-0.1.0.zip">plugin.video.kaito-0.1.0.zip</a>
+<br/>
 <a href="plugin.video.live.streamspro-3.0.0~alpha4.zip">plugin.video.live.streamspro-3.0.0~alpha4.zip</a>
 <br/>
 <a href="plugin.video.live.streamspro-3.0.0~alpha3.zip">plugin.video.live.streamspro-3.0.0~alpha3.zip</a>
