archive.org beta2

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <br/>
 <a href="plugin.video.archive.org-1.0.1~beta1.zip">plugin.video.archive.org-1.0.1~beta1.zip</a>
 <br/>
+<a href="plugin.video.archive.org-1.0.1~beta2.zip">plugin.video.archive.org-1.0.1~beta2.zip</a>
+<br/>
 <a href="plugin.video.live.streamspro-3.0.0~alpha4.zip">plugin.video.live.streamspro-3.0.0~alpha4.zip</a>
 </body>
 </html>
